--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.12
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY . /app/
+COPY requirements.txt .
+RUN pip3 install --no-cache-dir -r requirements.txt
 
-RUN pip3 install -r requirements.txt
+COPY . .
 
 EXPOSE 8000
 
-CMD python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000
