--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -9,3 +9,4 @@ COPY . .
 
 EXPOSE 8000
 
+CMD [ "bash", "-c", "while !</dev/tcp/postgres-db/5432; do sleep 1; done; python3 manage.py migrate && gunicorn config.wsgi:application --bind 0.0.0.0:8000" ]
