--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -9,6 +9,7 @@ click-repl==0.3.0
 Django==5.0.7
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
 iniconfig==2.0.0
 kombu==5.3.7
 packaging==24.1
